Fixed media query so grid displays properly on smaller width screens as well as larger

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -73,7 +73,6 @@ body, #root, #App, html {
 }
 
 #backOffSearch {
-  width: 10%;
   display: none;
 }
 
@@ -159,7 +158,7 @@ body, #root, #App, html {
   border-radius: 50%;
 }
 
-#gridHolder {
+#gridHolder, #favouritesHolder {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -167,7 +166,7 @@ body, #root, #App, html {
 }
 
 #spinnerHolder {
-  height: 800px;
+  height: 250px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -188,8 +187,8 @@ body, #root, #App, html {
 }
 
 .loader {
-  height: 175px;
-  width: 175px;
+  height: 75px;
+  width: 75px;
   border-radius: 50%;
   background-color: var(--main-bg-color);
   border: 10px solid var(--accent-color-gray);
@@ -224,9 +223,9 @@ body, #root, #App, html {
 @media (max-width: 1100px) {
   .grid {
     display: grid;
-    grid-template-rows: repeat(1, 310px);
+    grid-template-rows: repeat(9, 310px);
     grid-template-columns: repeat(1, 430px);
-    height: 2920px;
+    height: 2834px;
     justify-content: center;
   }
 }
