--- a/src/stylesheets/_App.scss
+++ b/src/stylesheets/_App.scss
@@ -74,8 +74,7 @@ body, #root, #App, html {
 
 
 #backOffSearch {
-  @extend #submit_search; 
-  width: 10%;
+  @extend #submit_search;
   display: none;
 }
 
@@ -170,8 +169,12 @@ body, #root, #App, html {
   flex-direction: column;
 }
 
+#favouritesHolder {
+  @extend #gridHolder;
+}
+
 #spinnerHolder {
-  height: 800px;
+  height: 250px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -193,8 +196,8 @@ body, #root, #App, html {
 }
 
 .loader {
-  height: 175px;
-  width: 175px;
+  height: 75px;
+  width: 75px;
   border-radius: 50%;
   background-color: var(--main-bg-color);
   border: 10px solid var(--accent-color-gray);
